kube/blogapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blogapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blogapp
  template:
    metadata:
      labels:
        app: blogapp
    spec:
      containers:
        - name: app
          image: sovietspy2/blogapp:latest
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: blogapp
spec:
  selector:
    app: blogapp
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
