kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blogapp-ingress
spec:
  rules:
    - host: blogapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blogapp
                port:
                  number: 80
